; ModuleID = '/home/carl/AnghaBench/esp-idf/components/bt/host/bluedroid/bta/hf_client/extr_bta_hf_client_at.c_bta_hf_client_parse_cind.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/bt/host/bluedroid/bta/hf_client/extr_bta_hf_client_at.c_bta_hf_client_parse_cind.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [7 x i8] c"+CIND:\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i8*)* @bta_hf_client_parse_cind to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @bta_hf_client_parse_cind(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i8*, align 8
  store i8* %0, i8** %3, align 8
  %4 = load i8*, i8** %3, align 8
  %5 = call i32 @AT_CHECK_EVENT(i8* %4, i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str, i64 0, i64 0))
  %6 = load i8*, i8** %3, align 8
  %7 = load i8, i8* %6, align 1
  %8 = sext i8 %7 to i32
  %9 = icmp eq i32 %8, 40
  br i1 %9, label %10, label %13

10:                                               ; preds = %1
  %11 = load i8*, i8** %3, align 8
  %12 = call i8* @bta_hf_client_parse_cind_list(i8* %11)
  store i8* %12, i8** %2, align 8
  br label %16

13:                                               ; preds = %1
  %14 = load i8*, i8** %3, align 8
  %15 = call i8* @bta_hf_client_parse_cind_values(i8* %14)
  store i8* %15, i8** %2, align 8
  br label %16

16:                                               ; preds = %13, %10
  %17 = load i8*, i8** %2, align 8
  ret i8* %17
}

declare dso_local i32 @AT_CHECK_EVENT(i8*, i8*) #1

declare dso_local i8* @bta_hf_client_parse_cind_list(i8*) #1

declare dso_local i8* @bta_hf_client_parse_cind_values(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
